regenerated files, additions made to messages call to enable custom headers