@@ -34,7 +34,9 @@ public class APIHelper {
     private static ExecutorService scheduler = null;
     private static final Object syncRoot = new Object();
   
-  
+    /**
+     * Singleton access to the threadpool scheduler
+     */
     public static ExecutorService getScheduler() {
         if (null == scheduler) {
             synchronized(syncRoot) {
@@ -46,7 +48,9 @@ public class APIHelper {
         return scheduler;
     }
 
- 
+    /**
+     * Shutdown all the threads
+     */
     public static void shutdown() {
         if(null != scheduler) {
             scheduler.shutdown();
@@ -63,27 +67,26 @@ public class APIHelper {
         }
     };
 
- 
-    private static JsonSerializer getSerializer(Annotation serializerAnnotation)
+    /**
+     * Get a JsonSerializer instance from the provided annotation.
+     * @param  serializerAnnotation The Annotation containing information about the serializer
+     * @return The JsonSerializer instance of the required type
+     */
+    private static JsonSerializer getSerializer(JsonSerialize serializerAnnotation)
     {
-        String sa = serializerAnnotation.toString();
-        sa = sa.substring(sa.indexOf("using=class ") + 12);
-        sa = sa.substring(0, sa.indexOf(','));
         try {
-            return (JsonSerializer) Class.forName(sa).newInstance();
-        } catch (InstantiationException e) {
-            e.printStackTrace();
-            return null;
-        } catch (IllegalAccessException e) {
-            e.printStackTrace();
-            return null;
-        } catch (ClassNotFoundException e) {
+            return serializerAnnotation.using().getDeclaredConstructor().newInstance();
+        } catch (Exception e) {
             e.printStackTrace();
             return null;
         }
     }
 
-
+    /**
+     * JSON Serialization of a given object.
+     * @param  obj The object to serialize into JSON
+     * @return The serialized Json string representation of the given object
+     */
     public static String serialize(Object obj)
             throws JsonProcessingException {
         if(null == obj)
@@ -92,7 +95,12 @@ public class APIHelper {
         return mapper.writeValueAsString(obj);
     }
 
-
+    /**
+     * JSON Serialization of a given object using a specified JsonSerializer.
+     * @param  obj The object to serialize into JSON
+     * @param  serializer The instance of JsonSerializer to use
+     * @return The serialized Json string representation of the given object
+     */
     public static String serialize(Object obj, final JsonSerializer serializer)
             throws JsonProcessingException {
         if(null == obj || null == serializer)
@@ -125,7 +133,12 @@ public class APIHelper {
         }
     }
 
-
+    /**
+     * JSON Deserialization of the given json string.
+     * @param   json The json string to deserialize
+     * @param   <T>  The type of the object to deserialize into
+     * @return  The deserialized object
+     */
     public static <T extends Object> T deserialize(String json, TypeReference<T> typeReference)
             throws IOException {
         if (isNullOrWhiteSpace(json))
@@ -134,7 +147,14 @@ public class APIHelper {
         return mapper.readValue(json, typeReference);
     }
 
-
+    /**
+     * JSON Deserialization of the given json string using a specified JsonDerializer.
+     * @param   json The json string to deserialize
+     * @param   <T>  The type of the object to deserialize into
+     * @param   cls  The class to attach the deserializer to
+     * @param   deserializer  The deserializer to use
+     * @return  The deserialized object
+     */
     public static <T extends Object> List<T> deserialize(String json, final TypeReference<List<T>> typeReference,
             final Class<T> cls, final JsonDeserializer<T> deserializer) throws IOException {
         if (isNullOrWhiteSpace(json))
@@ -151,7 +171,12 @@ public class APIHelper {
         }.readValue(json, typeReference);
     }
 
-
+    /**
+     * JSON Deserialization of the given json string.
+     * @param   jParser The json parser for reading json to deserialize
+     * @param   <T> The type of the object to deserialize into
+     * @return  The deserialized object
+     */
     public static <T extends Object> T deserialize(String json, Class<T> typeReference)
             throws IOException {
         if (isNullOrWhiteSpace(json))
@@ -160,14 +185,22 @@ public class APIHelper {
         return mapper.readValue(json, typeReference);
     }
 
- 
+    /**
+     * Populates an object of an APIException subclass with the required properties.
+     * @param   json The json string to deserialize
+     * @param   <APIException>  The object to populate.
+     */
     public static void populate(String json, APIException obj)
             throws IOException {
         if (!isNullOrWhiteSpace(json))
             mapper.readerForUpdating(obj).readValue(json);;
     }
 
- 
+    /**
+     * JSON Deserialization of the given json string.
+     * @param   json    The json string to deserialize
+     * @return  The deserialized json as a Map
+     */
     public static LinkedHashMap<String, Object> deserialize(String json)
             throws IOException {
         if (isNullOrWhiteSpace(json))
@@ -178,7 +211,11 @@ public class APIHelper {
         return deserialize(json, typeRef);
     }
 
-  
+    /**
+     * Replaces template parameters in the given url
+     * @param   queryBuilder    The query string builder to replace the template parameters
+     * @param   parameters      The parameters to replace in the url
+     */
     public static void appendUrlWithTemplateParameters(StringBuilder queryBuilder, Map<String, Object> parameters) {
         //perform parameter validation
         if (null == queryBuilder)
@@ -204,7 +241,11 @@ public class APIHelper {
         }
     }
 
-
+    /**
+     * Appends the given set of parameters to the given query string
+     * @param   queryBuilder  The query url string to append the parameters
+     * @param   parameters    The parameters to append
+     */
     public static void appendUrlWithQueryParameters(StringBuilder queryBuilder, Map<String, Object> parameters) {
         //perform parameter validation
         if (null == queryBuilder)
@@ -220,7 +261,11 @@ public class APIHelper {
         encodeObjectAsQueryString("", parameters, queryBuilder);
     }
 
- 
+    /**
+     * Validates if the string is null, empty or whitespace
+     * @param   s The string to validate
+     * @return  The result of validation
+     */
     public static boolean isNullOrWhiteSpace(String s) {
         if(s == null)
             return true;
@@ -237,7 +282,12 @@ public class APIHelper {
         return false;
     }
 
-
+    /**
+     * Replaces all occurrences of the given string in the string builder
+     * @param   stringBuilder The string builder to update with replaced strings
+     * @param   toReplace     The string to replace in the string builder
+     * @param   replaceWith   The string to replace with
+     */
     public static void replaceAll(StringBuilder stringBuilder, String toReplace, String replaceWith) {
         int index = stringBuilder.indexOf(toReplace);
         
@@ -248,14 +298,20 @@ public class APIHelper {
         }
     }
 
-
+    /**
+     * Removes null values from the given map
+     */
     public static void removeNullValues(Map<String, ?> map) {
         if(map == null)
             return;
         map.values().removeAll(Collections.singleton(null));
     }
 
-
+    /**
+     * Validates and processes the given Url
+     * @param    url The given Url to process
+     * @return   Pre-process Url as string
+     */
     public static String cleanUrl(StringBuilder url)
     {
         //ensure that the urls are absolute
@@ -275,7 +331,11 @@ public class APIHelper {
         return protocol.concat(query);
     }
 
- 
+    /**
+     * Prepares Array style form fields from a given array of values
+     * @param   value   Value for the form fields
+     * @return  Dictionary of form fields created from array elements
+     */
     public static List<SimpleEntry<String, Object>> prepareFormFields(Object value) {
         List<SimpleEntry<String, Object>> formFields = new ArrayList<SimpleEntry<String, Object>>();
         if(value != null) {
@@ -287,7 +347,12 @@ public class APIHelper {
         return formFields;
     }
 
-
+    /**
+     * Encodes a given object to url encoded string
+     * @param name
+     * @param obj
+     * @param objBuilder
+     */
     private static void encodeObjectAsQueryString(String name, Object obj, StringBuilder objBuilder) {
         try {
             if(obj == null)
@@ -322,7 +387,13 @@ public class APIHelper {
         }
     }
 
-
+    /**
+     * Used for flattening a collection of objects into a string
+     * @param   array     Array of elements to flatten
+     * @param   fmt       Format string to use for array flattening
+     * @param   separator Separator to use for string concat
+     * @return  Representative string made up of array elements
+     */
     private static String flattenCollection(String elemName, Collection<?> array, String fmt, char separator) {
         StringBuilder builder = new StringBuilder();
 
@@ -347,7 +418,11 @@ public class APIHelper {
         return builder.toString();
     }
 
-
+    /**
+     * Tries Url encode using UTF-8
+     * @param value The value to url encode
+     * @return
+     */
     private static String tryUrlEncode(String value) {
         try {
             return URLEncoder.encode(value, "UTF-8");
@@ -356,7 +431,14 @@ public class APIHelper {
         }
     }
 
-
+    /**
+     * Converts a given object to a form encoded map
+     * @param objName Name of the object
+     * @param obj The object to convert into a map
+     * @param objectList The object list to populate
+     * @param processed List of objects hashCodes that are already parsed
+     * @throws InvalidObjectException
+     */
     private static void objectToList(
             String objName, Object obj, List<SimpleEntry<String,Object>> objectList, HashSet<Integer> processed)
     throws InvalidObjectException {
@@ -441,7 +523,7 @@ public class APIHelper {
                 try {
                     //load key value pair
                     Object value = method.invoke(obj);
-                    Annotation serializerAnnotation = method.getAnnotation(JsonSerialize.class);
+                    JsonSerialize serializerAnnotation = method.getAnnotation(JsonSerialize.class);
                     if (serializerAnnotation != null)
                         loadKeyValuePairForEncoding(key, value, objectList, processed, serializerAnnotation);
                     else
@@ -468,7 +550,14 @@ public class APIHelper {
         }
     }
 
-
+    /**
+     * While processing objects to map, decides whether to perform recursion or load value
+     * @param key The key to used for creating key value pair
+     * @param value The value to process against the given key
+     * @param objectList The object list to process with key value pair
+     * @param processed List of processed objects hashCodes
+     * @throws InvalidObjectException
+     */
     private static void loadKeyValuePairForEncoding(
             String key, Object value, List<SimpleEntry<String, Object>> objectList, HashSet<Integer> processed)
     throws InvalidObjectException {
@@ -480,10 +569,18 @@ public class APIHelper {
             objectToList(key, value, objectList, processed);
     }
 
- 
+    /**
+     * While processing objects to map, loads value after serializing
+     * @param key The key to used for creating key value pair
+     * @param value The value to process against the given key
+     * @param objectList The object list to process with key value pair
+     * @param processed List of processed objects hashCodes
+     * @param serializerAnnotation 
+     * @throws InvalidObjectException
+     */
     private static void loadKeyValuePairForEncoding(
             String key, Object value, List<SimpleEntry<String, Object>> objectList, HashSet<Integer> processed,
-            Annotation serializerAnnotation)
+            JsonSerialize serializerAnnotation)
     throws InvalidObjectException {
         if(value == null)
             return;
@@ -497,11 +594,19 @@ public class APIHelper {
         }
     }
 
+    /**
+     * List of classes that are wrapped directly. This information is need when
+     * traversing object trees for reference matching
+     */
     private static final Set<Class> WRAPPER_TYPES = new HashSet(Arrays.asList(
             Boolean.class, Character.class, Byte.class, Short.class, String.class,
             Integer.class, Long.class, Float.class, Double.class, Void.class, File.class));
 
-
+    /**
+     * Checks if the given class can be wrapped directly
+     * @param clazz The given class
+     * @return true if the given class is an autoboxed class e.g., Integer
+     */
     private static boolean isWrapperType(Class clazz) {
         return WRAPPER_TYPES.contains(clazz) || clazz.isPrimitive() || clazz.isEnum();
     }
